# datastar-lsp

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: release.yml
crates/tree-sitter-datastar/: Cargo.toml  build.rs
crates/tree-sitter-datastar/src/: lib.rs
lua/datastar-lsp/: init.lua
queries/: injections-html.scm
src/: attribute_name.rs  lib.rs  line_index.rs  main.rs  server.rs  util.rs
src/analysis/: code_actions.rs  completions.rs  cursor.rs  diagnostics.rs  events.rs  examples.rs  goto_def.rs  hover.rs  mod.rs  project_index.rs  references.rs  rename.rs  semantic_tokens.rs  signal_util.rs  signals.rs  ts_util.rs  value_scanner.rs
src/data/: actions.rs  attributes.rs  events.rs  mod.rs  modifiers.rs
src/features/: completion.rs  diagnostics.rs  goto_def.rs  hover.rs  mod.rs  references.rs  rename.rs  semantic_tokens.rs
src/parser/: attributes.rs  expression.rs  html.rs  mod.rs
test/fixtures/: test.blade.php  test.heex  test.html  test.jsx  test.templ  test.tsx
tests/: integration.rs
vscode/: extension.js  package.json
zed/: Cargo.toml  extension.toml
zed/src/: lib.rs
