[package]
name = "datastar-lsp"
version = "0.1.0"
edition = "2021"
description = "Language Server Protocol implementation for Datastar hypermedia framework"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tree-sitter = "0.26"
tree-sitter-html = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-datastar = { path = "crates/tree-sitter-datastar" }
dashmap = "6"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
log = "0.4"

[workspace]
members = ["crates/*"]

[[bin]]
name = "datastar-lsp"
path = "src/main.rs"
